// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> component its snapshot matches story Default 1`] = `
<div>
  <div
    class="Checkboxstyles__Checkbox-sc-1bkog90-0"
  >
    <div
      class="bx--form-item bx--checkbox-wrapper"
    >
      <input
        class="bx--checkbox"
        id="id"
        name="name"
        type="checkbox"
      />
      <label
        class="bx--checkbox-label"
        for="id"
      >
        <span
          class="bx--checkbox-label-text"
        >
          A label
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> component its snapshot matches story OnFieldPanel 1`] = `
.c0 {
  background-color: #f3f3f3;
  margin-bottom: 1.5rem;
  padding: 1.5rem;
}

.c1 {
  font: 400 1.25rem/1.4 'IBM Plex Sans',Arial,sans-serif;
  margin-bottom: 1.5rem;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      A fieldpanel
    </span>
    
    <div
      class="Checkboxstyles__Checkbox-sc-1bkog90-0"
    >
      <div
        class="bx--form-item bx--checkbox-wrapper"
      >
        <input
          class="bx--checkbox"
          id="id"
          name="name"
          type="checkbox"
        />
        <label
          class="bx--checkbox-label"
          for="id"
        >
          <span
            class="bx--checkbox-label-text"
          >
            A label
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> component its snapshot matches story TestOnForm 1`] = `
<div>
  <div>
    <div>
      <div>
        react-hook-form
      </div>
      <div
        style="display: flex; justify-content: space-between;"
      >
        <div>
          <div
            class="Checkboxstyles__Checkbox-sc-1bkog90-0"
          >
            <div
              class="bx--form-item bx--checkbox-wrapper"
            >
              <input
                class="bx--checkbox"
                id="id"
                name="field"
                type="checkbox"
              />
              <label
                class="bx--checkbox-label"
                for="id"
              >
                <span
                  class="bx--checkbox-label-text"
                >
                  A label
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          style="width: 25%; padding: 1rem; background: rgb(238, 238, 238);"
        >
          <div>
            true
          </div>
          <div
            style="margin-top: 1rem;"
          >
            <input
              id="formData"
              style="padding: 0.5rem;"
              type="text"
            />
            <button
              style="padding: 0.5rem;"
            >
              Set
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style="margin-top: 2rem;"
    >
      <div>
        as standalone field
      </div>
      <div
        style="display: flex; justify-content: space-between;"
      >
        <div>
          <div
            class="Checkboxstyles__Checkbox-sc-1bkog90-0"
          >
            <div
              class="bx--form-item bx--checkbox-wrapper"
            >
              <input
                checked=""
                class="bx--checkbox"
                id="field2"
                type="checkbox"
              />
              <label
                class="bx--checkbox-label"
                for="field2"
              >
                <span
                  class="bx--checkbox-label-text"
                />
              </label>
            </div>
          </div>
        </div>
        <div
          style="width: 25%; padding: 1rem; background: rgb(238, 238, 238);"
        >
          <div>
            true
          </div>
          <div
            style="margin-top: 1rem;"
          >
            <input
              id="sData"
              style="padding: 0.5rem;"
              type="text"
            />
            <button
              style="padding: 0.5rem;"
            >
              Set
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> component its snapshot matches story WithError 1`] = `
.c0 {
  border: 2px solid #da1e28;
}

.c1 {
  color: #da1e28;
  font-size: 12px;
  line-height: 16px;
  margin-top: 4px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="bx--form-item bx--checkbox-wrapper"
    >
      <input
        class="bx--checkbox"
        id="id"
        name="name"
        type="checkbox"
      />
      <label
        class="bx--checkbox-label"
        for="id"
      >
        <span
          class="bx--checkbox-label-text"
        >
          A label
        </span>
      </label>
    </div>
  </div>
  <div
    class="c1"
  >
    Some error text
  </div>
</div>
`;

exports[`<Checkbox /> component its snapshot matches story WithHelpText 1`] = `
.c0 {
  color: #565656;
  font-size: 12px;
  line-height: 16px;
  margin-top: 4px;
}

<div>
  <div
    class="Checkboxstyles__Checkbox-sc-1bkog90-0"
  >
    <div
      class="bx--form-item bx--checkbox-wrapper"
    >
      <input
        class="bx--checkbox"
        id="id"
        name="name"
        type="checkbox"
      />
      <label
        class="bx--checkbox-label"
        for="id"
      >
        <span
          class="bx--checkbox-label-text"
        >
          A label
        </span>
      </label>
    </div>
  </div>
  <div
    class="c0"
  >
    Some help text
  </div>
</div>
`;
